--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,18 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.poppins{
+  font-family: "Poppins";
+}
+
+.ml-10{
+  margin-left: 10px;
+}
+
+.mt-10{
+  margin-top: 25px;
+  margin-bottom: 2px;
+}
 .h-100{
   height: 100vh;
 }
@@ -49,4 +61,38 @@ input[type="file"]::-webkit-file-upload-button {
   font-size: 25px;
   margin: 0px 10px;
   transition: all 0.3s linear ease-in;
+}
+
+.uppercase{
+  text-transform: uppercase;
+}
+
+.flex-col{
+  display: flex;
+  padding: 10px 5px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.profile-row{
+  width: 90%;
+  height: max-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 2% 0;
+}
+
+.profileImage{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #1890ff;
+  padding: 2px;
+  margin-right: 2px;
+}
+
+a{
+  text-decoration: none;
 }
