--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,14 @@
   font-family: "Poppins";
 }
 
+.font18{
+  font-size: 18px;
+}
+
+.blue-border{
+  border: 1px solid #1890ff;
+}
+
 .ml-10{
   margin-left: 10px;
 }
