--- a/frontend/src/styles/CommentCard.css
+++ b/frontend/src/styles/CommentCard.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     border: 1px solid #1890ff;
     padding: 5px 10px;
-    margin-bottom: 5px;
+    margin: 5px 0px;
+    border-radius: 20px;
 }
 .commentTopNav{
     display: flex;
